src/index.css
*{
 margin: 0px;
 color: white;

}
h1,
h2,
h3,
h4{
margin-bottom: 0.6em;
font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
p{
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    margin-bottom: 0.3em;
    font-size: clamp(1.5rem, 2vw + 0.5rem, 2.0rem);
}
h1{
    font-size: 2em;
    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
h2{
    font-size: 2em;
}
h2.text, h3.text, h4.text {
    text-decoration: underline;
}


/* Child element (a tag) */
a {
    transition: filter 0.3s ease; /* Smooth transition for the filter */
    text-decoration: none;
}

/* Hover effect: Darken using filter */
a:hover {
    filter: brightness(80%); /* Darken the background */

}
html{
    background-color: #585454;
    overflow-x: hidden;
}

